# luWidget

./: .gitignore  README.md  index.html  notification.html  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
