[package]
name = "luwidget"
version = "0.1.0"
description = "Simple desktop widget"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.1.0", features = ["tray-icon"] }
serde_json = "1.0"
auto-launch = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
